--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^0.20.8",
     "@expo/metro-config": "^0.17.4",
     "@shopify/flash-list": "1.6.3",
     "@tanstack/react-query": "^5.22.2",
@@ -25,6 +26,7 @@
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.7",
+    "expo-secure-store": "^12.8.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "nativewind": "~4.0.36",
