--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -18,6 +18,7 @@
     "@acme/db": "workspace:^0.1.0",
     "@acme/ui": "workspace:^0.1.0",
     "@acme/validators": "workspace:^0.1.0",
+    "@clerk/nextjs": "^4.29.9",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.22.2",
     "@trpc/client": "11.0.0-next-beta.294",
