--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,14 +11,15 @@
     "clean": "rm -rf .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint .",
-    "push": "pnpm with-env drizzle-kit push:mysql",
+    "push": "pnpm with-env drizzle-kit push:pg",
     "studio": "pnpm with-env drizzle-kit studio",
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
     "@planetscale/database": "^1.16.0",
-    "drizzle-orm": "^0.29.4"
+    "drizzle-orm": "^0.29.4",
+    "postgres": "^3.3.5"
   },
   "devDependencies": {
     "@acme/eslint-config": "workspace:^0.2.0",
