fix nativewind, add docker-compose to support local db

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@
 # The database URL is used to connect to your postgres database.
 DATABASE_URL='postgres://'
 
+# /packages/db/src/index.ts now has logic to use a proxy in case you want to use a local database.
+# proxy is only enabled if the USE_LOCAL_DB environment variable is set to true
+USE_LOCAL_DB=false
+
 # clerk
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_
 CLERK_SECRET_KEY=sk_test_
+
